Fix spacing in openable section content

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,7 +7,8 @@
 
 hr {
   border: none;
-  border-top: 1px solid #ecf0f1; }
+  border-top: 1px solid #ecf0f1;
+  width: 100%; }
 
 ::-webkit-scrollbar {
   width: 20px; }
@@ -193,9 +194,12 @@ body {
           font-size: 17.6px;
           line-height: 36.8px; } }
   .openable-section .content {
-    flex-basis: 100%; }
+    flex-basis: 100%;
+    display: flex;
+    flex-direction: column; }
 
 .col:first-child .moves .content .move-buttons {
+  flex-basis: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
