--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -110,6 +110,7 @@ $page-phone-width: 650px;
 hr {
   border: none;
   border-top: 1px solid $page-grey;
+  width: 100%;
 }
 
 // custom scrollbar
