--- a/src/sass/components/_move-buttons.scss
+++ b/src/sass/components/_move-buttons.scss
@@ -1,5 +1,6 @@
 // moves list
 .col:first-child .moves .content .move-buttons {
+  flex-basis: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
