--- a/src/sass/components/_openable-section.scss
+++ b/src/sass/components/_openable-section.scss
@@ -64,5 +64,7 @@
 
   .content {
     flex-basis: 100%;
+    display: flex;
+    flex-direction: column;
   }
 }
